decal-macros/tests/ui/fail/fragment_with_children.rs
use decal::fragment;

fn main() {
    let frag = fragment! {
        Column {}
    };

    let _ = fragment! {
        Fragment(frag) {
            Text("child")
        }
    };
}
