decal-macros/tests/ui/fail/fragment_with_children.stderr
error: [`decal::prelude::Fragment`] node cannot contain children
 --> tests/ui/fail/fragment_with_children.rs:9:9
  |
9 |         Fragment(frag) {
  |         ^^^^^^^^
